--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "hugo-hero-theme"
   google_analytics_id=""
 
   [params.homepage_meta_tags]
-    meta_description = "Hero is a multipurpose Hugo theme with fullscreen hero images and page sections. It contains content types for a business or portfolio site."
+    meta_description = "El equipo esta formado por un grupo de muchachos talentosos que son una muestra de la cantera Sonorense de futuros peloteros y una veradera muestra de pasión por este bonito deporte."
     meta_og_title = "Hugo Hero Theme"
     meta_og_type = "website"
     meta_og_url = "https://astrosvillasonora.netlify.com"
