--- a/config.toml
+++ b/config.toml
@@ -23,8 +23,8 @@ theme = "hugo-hero-theme"
     weight = 1
 
 [[menu.main]]
-    name = "Work"
-    url = "/work/"
+    name = "Liga"
+    url = "/Liga/"
     weight = 2
 
 [[menu.main]]
