--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,4 +1,4 @@
-email: 'zerostaticthemes@gmail.com'
-phone: 'XXXX XXX XXX'
-businessName: 'Hugo Serif'
-address: ''
+email: 'jlmanzanaresrivera@gmail.com'
+phone: '631 XXX XXX'
+businessName: 'Astros de Villa Sonora'
+address: 'Parque Villa Sonora'
